Mettre en page la bannière, l'accueil et intégrer les films

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Vibur&display=swap" rel="stylesheet">
+    
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
+
     <title>Les Films de Plein Air</title>
 </head>
 <body>
@@ -29,5 +35,73 @@
             <a href="#"><i class="fab fa-twitter-square"></i></a>
         </div>
     </header>
+
+    <main>
+        <header class="banner">
+            <div class="main_header">
+                <h1>
+                    festival des films de plein air<br>
+                    du 5 au 8 août 2021<br>
+                    parc monceau, paris
+                </h1>
+            </div>
+        </header>
+
+        <section>
+            <section>
+                <h2>Jeudi 5 Août</h2>
+                <div class="poster">
+                    <div><img src="./affiches/drive.jpg" alt="Drive affiche"></div>
+                    <div><img src="./affiches/moonlight.jpg" alt="Elle affiche"></div>
+                </div>
+            </section>
+
+            <section>
+                <h2>Vendredi 6 Août</h2>
+                <div class="poster">
+                    <div><img src="./affiches/gone_girl.jpg" alt="Gone girl affiche"></div>
+                    <div><img src="./affiches/haine.jpg" alt="La Haine affiche"></div>
+                </div>
+            </section>
+
+            <section>
+                <h2>Samedi 7 Août</h2>
+                <div class="poster">
+                    <div><img src="./affiches/her.jpg" alt="Her affiche"></div>
+                    <div><img src="./affiches/imitation_game.jpg" alt="Imitation Game affiche"></div>
+                </div>
+            </section>
+
+            <section>
+                <h2>Dimanche 8 Août</h2>
+                <div class="poster">
+                    <div><img src="./affiches/lobster.jpg" alt="The Lobster affiche"></div>
+                    <div><img src="./affiches/melancholia.jpg" alt="Elle affiche"></div>
+                </div>
+            </section>
+        </section>
+
+        <section>
+            <h2>Préinscription</h2>
+            <form>
+                <fieldset>
+                    <legend>Préinscription</legend>
+                </fieldset>
+            </form>
+        </section>
+        
+        <section>
+            <h2>Newsletter</h2>
+            <form>
+                <fieldset>
+                    <legend>Newsletter</legend>
+                </fieldset>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>Mentions légales</p>
+    </footer>
 </body>
 </html>
