--- a/legal.html
+++ b/legal.html
@@ -42,7 +42,7 @@
         <header class="banner">
             <div class="main_header">
                 <h1>
-                    festival des films de plein air<br> du 5 au 8 août 2021<br> parc monceau, paris
+                    festival des films de plein air<br> du <span class="driveColor">5</span> au <span class="driveColor">8 août 2021</span><br> parc monceau, paris
                 </h1>
             </div>
         </header>
